# agentrio

./: .gitignore  README.md  main.py  pyproject.toml
modules/: acl_generator.py  articurator.py  gateway.py  orchestrator.py  personas.py
tests/: test_search.py  test_site_scraper.py
web/: models.py  settings.py  urls.py  utils.py  views.py
web/migrations/: 0001_initial.py  0002_prompttemplate_remove_agenttask_log_output_and_more.py  0003_delete_prompttemplate.py  0004_agenttask_execution_logs.py
web/static/css/: style.css
web/templates/: base.html  config_form.html  dashboard.html  execution.html  select_mode.html
